--- a/PolishVATWebServices/PolishVATWebServices.csproj
+++ b/PolishVATWebServices/PolishVATWebServices.csproj
@@ -1,11 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\PolishVATLib\PolishVATLib.csproj" />
+    <ProjectReference Include="..\PolishVATLib\PolishVATLib.csproj"/>
   </ItemGroup>
-  
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.3.3"/>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.7"/>
+  </ItemGroup>
 </Project>
