--- a/PolishVATWebServices/PolishVATWebServices.csproj
+++ b/PolishVATWebServices/PolishVATWebServices.csproj
@@ -8,5 +8,11 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.3.3"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.HttpsPolicy" Version="2.2.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.CookiePolicy" Version="2.2.8"/>
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.3"/>
   </ItemGroup>
 </Project>
